Estudos/meu_primeiro_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springfield
spec:
  finalizers:
  - kubernetes
