Estudos/meu_pod_liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-liveness-probe
  namespace: lupalinda
  labels:
    run: random
spec:
  containers:
  - image: k8spatterns/random-generator:1.0
    name: random-generation
    ports:
    - containerPort: 8080
      protocol: TCP
    livenessProbe:
      httpGet:
        path: /actuator/health
        port: 8080
      initialDelaySeconds: 30
