Estudos/meu_pod_nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
 name: random-generator
spec:
 containers:
 - image: k8spatterns/random-generator:1.0
 name: random-generator
 nodeSelector:
 disktype: ssd
