Estudos/meu_pod_prestop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-pre-stop-hook
  namespace: lupalinda
  labels:
    run: poststart
spec:
  containers:
  - image: k8spatterns/random-generator:1.0
    name: random-generation
    lifecycle:
      preStop:
        httpGet:
          port: 8080
          path: /shutdown
