Estudos/meu_primeiro_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: nginx
    run: giropops
  name: primeiro-deployment
  namespace: lupalinda
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
        dc: UK
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx2
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
