Estudos/meu_primeiro_pod_configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-configmap
  namespace: default
spec:
 containers:
 - image: busybox
   name: busy-configmap
   command:
     - sleep
     - "3600"
