Estudos/meu_primeiro_pod_limitado.yml
apiVersion: v1
kind: Pod
metadata:
  name: limit-pod
  namespace: lupalinda
spec:
  containers:
  - name: meu-container
    image: nginx
