Estudos/pod-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: lupalinda
spec:
  containers:
  - image: busybox
    name: busy
    command:
      - sleep
      - "3600"
    volumeMounts:
    - mountPath: /lupalinda
      name: lupalinda-dir
  volumes:
  - name: lupalinda-dir
    emptyDir: {}
