Estudos/meu_primeiro_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: meu-nginx
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  sessionAffinity: None
  type: NodePort
