Estudos/meu_primeiro_service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: meu-nginx
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32333
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  sessionAffinity: None
  type: LoadBalancer
